mudança da foto

--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
               <h2>Bem-vindo ao Meu Site</h2>
               <form action="login.php" method="post" autocomplete="on">
                 <div class="campo">
-                    <label for="ilogin">Login</label> <br>
+                    <label for="ilogin">Login:</label> <br>
                     <input type="email" name="login" id="ilogin" placeholder="E-mail" autocomplete="email" required maxlength="30">
                 </div>
                 <div class="campo">
-                    <label for="isenha">Senha</label> <br>
+                    <label for="isenha">Senha:</label> <br>
                     <input type="password" name="senha" id="isenha" placeholder="Senha" autocomplete="current-password" required minlength="8">
                    
                 </div>
